# gitcommit-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/gitcommit_ai/: __init__.py  ai_providers.py  cli.py  config.py  git_utils.py
