[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitcommit-ai"
version = "1.0.0"
description = "🤖 AI-powered Git commit message generator with multi-model support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "GitCommit AI Team" }
]
keywords = ["git", "commit", "ai", "llm", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
gitcm = "gitcommit_ai.cli:main"
gitcommit-ai = "gitcommit_ai.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/gitcommit-ai"
Documentation = "https://github.com/yourusername/gitcommit-ai#readme"
Repository = "https://github.com/yourusername/gitcommit-ai"
Issues = "https://github.com/yourusername/gitcommit-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gitcommit_ai"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
